Testing PR Blocking

--- a/force-app/main/default/classes/AccountInsertClassDemo.cls
+++ b/force-app/main/default/classes/AccountInsertClassDemo.cls
@@ -65,6 +65,7 @@ public with sharing class AccountInsertClassDemo {
                 }
             }
             insert accList;
+            System.debug ('Test Vulnerability');
         } else {
             throw new CustomException('You do not have permission to create Account records.');
         }
